# fast-validation

./: .gitignore  AGENTS.md  README.md  pyproject.toml
fast_validation/: __init__.py  exceptions.py  from_schema.py  paths.py  schema.py  validation_rule.py
tests/: test_from_schema_decorator.py  test_nested_schema.py  test_schema.py
